# gateway-clients

./: .gitignore  DEVELOPER_GUIDE.md  LICENSE  README.md
.github/workflows/: gateway-sdk-ci.yml
scripts/: package-sdks.ps1
src/dotnet/: .gitignore  README.md
src/dotnet/Airlock.Gateway.Sdk/: Airlock.Gateway.Sdk.csproj  AirlockAuthClient.cs  AirlockGatewayClient.cs  AirlockGatewayException.cs  IAirlockGatewayClient.cs
src/dotnet/Airlock.Gateway.Sdk.TestEnforcer/: Airlock.Gateway.Sdk.TestEnforcer.csproj  Program.cs
src/dotnet/Airlock.Gateway.Sdk.Tests/: Airlock.Gateway.Sdk.Tests.csproj  AirlockGatewayClientTests.cs  ErrorHandlingTests.cs  MockHttpHandler.cs  ModelSerializationTests.cs
src/dotnet/Airlock.Gateway.Sdk/Crypto/: CanonicalJson.cs  CryptoHelpers.cs  NonceJournal.cs
src/dotnet/Airlock.Gateway.Sdk/Models/: ArtifactSubmitBody.cs  DecisionDeliverBody.cs  DndModels.cs  HarpEnvelope.cs  PairingModels.cs  PresenceModels.cs
src/go/: README.md  go.mod  go.sum
src/go/airlock/: auth_client.go  canonical.go  client.go  client_test.go  crypto.go  errors.go  models.go  models_test.go  nonce_journal.go
src/go/cmd/test-enforcer/: main.go
src/n8n-nodes-airlock/: README.md  jest-output.txt  jest.config.js  package-lock.json  package.json  tsconfig.json
src/n8n-nodes-airlock/__tests__/: credential.test.ts  mappers.test.ts
src/n8n-nodes-airlock/credentials/: AirlockGatewayApi.credentials.ts
src/n8n-nodes-airlock/nodes/AirlockEcho/: AirlockEcho.node.ts
src/n8n-nodes-airlock/nodes/AirlockEnforcer/: AirlockEnforcer.node.ts
src/n8n-nodes-airlock/utils/: artifactBuilder.ts  authResolver.ts  clientFactory.ts  consentNormalizer.ts  crypto.ts  errorMapper.ts  outputMapper.ts  validation.ts
src/python/: .gitignore  README.md  pyproject.toml  requirements.txt  test_enforcer.py
src/python/airlock_gateway/: __init__.py  auth_client.py  canonical_json.py  client.py  crypto_helpers.py  exceptions.py  models.py  nonce_journal.py
src/python/tests/: conftest.py  test_client.py  test_models.py
src/rust/: Cargo.toml  README.md
src/rust/src/: auth_client.rs  canonical_json.rs  client.rs  crypto.rs  errors.rs  lib.rs  models.rs  nonce_journal.rs
src/rust/tests/: integration_tests.rs
src/typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
src/typescript/src/: auth-client.ts  canonical-json.ts  client.ts  crypto.ts  errors.ts  index.ts  models.ts
src/typescript/test-enforcer/: index.ts  package.json
src/typescript/tests/: canonical-json.test.ts  client.test.ts  helpers.ts  models.test.ts
