[package]
name = "airlock-gateway"
version = "0.1.0"
edition = "2021"
description = "Client SDK for the Airlock Gateway — submit artifacts, poll for decisions, manage pairing and presence."
license = "MIT"
keywords = ["airlock", "gateway", "sdk", "harp", "approval"]

[dependencies]
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread", "rt", "net", "io-util"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
console = "0.15"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
